Added Eclipse plugin build to nightly test scri...
Added Eclipse plugin build to nightly test scripts. Updated them to be
in sync with those actually used.